2006-07-17  Roger Leigh  <rleigh@debian.org>

	* NEWS: Document stricter duplicate checking, and improved error
	reporting.

	* dchroot/dchroot-chroot-config.cc,
	dchroot-dsa/dchroot-dsa-chroot-config.cc: Duplicate chroot names
	are treated as an error.

	* sbuild/sbuild-keyfile.h: Use log_exception_warning in place of
	log_warning.
	(operator >>): Duplicate groups and keys within groups are an
	error.

	* dchroot/dchroot-session-base.cc
	(run_impl): Use arguments with USER_SWITCH.

	* sbuild/sbuild-session.cc: Add format arguments to USER_SWITCH
	error code.

	* sbuild/sbuild-custom-error.h: Add two additional constructors
	with two context arguments.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-main-base.cc: Add error code enum and string
	map.
	(run_impl): Throw custom exception using new error codes.

	* configure.ac (PACKAGE_LOCALSTATE_DIR): Remove trailing /.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-listmounts-main.cc: Add error code enum and
	string map.
	(list_mounts) Throw custom exception using new error codes.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* test/sbuild-personality.cc: Add tests for stream operators.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-lock.cc: Rename _RELEASE error codes to _UNLOCK
	and reword error messages to be uniform with chroot error
	messages.

	* sbuild/sbuild-chroot-config.cc: Rename CHROOT error to
	CHROOT_NOTFOUND, to reduce ambiguity.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-log.cc
	(log_exception_error): Rename from log_exception.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* Remove redundant emacs local variables use in C++ sources.

2006-07-17  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* sbuild/sbuild-chroot.cc
	(set_persona): Remove method overloaded for a string.
	(get_keyfile): Use keyfile::set_object_value for the personality.
	(set_keyfile): Use keyfile::get_object_value for the personality.