@@ -1,5 +1,10 @@
 2006-07-17  Roger Leigh  <rleigh@debian.org>
 
+	* Use log_exception_error and log_exception_error in place of
+	log_error and log_warning.
+
+2006-07-17  Roger Leigh  <rleigh@debian.org>
+
 	* NEWS: Document stricter duplicate checking, and improved error
 	reporting.
 
